samples/_failures_safe/1761476142_097e5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ed4cd86.c: In function ‘main’:
./samples/SAFE/__tmp_5ed4cd86.c:148:54: error: expected ‘)’ at end of input
  148 |         if (strcmp(input, "ALL") == 0 || strcmp(input
      |                                                ~     ^
      |                                                      )
./samples/SAFE/__tmp_5ed4cd86.c:148:42: error: too few arguments to function ‘strcmp’
  148 |         if (strcmp(input, "ALL") == 0 || strcmp(input
      |                                          ^~~~~~
In file included from ./samples/SAFE/__tmp_5ed4cd86.c:4:
/usr/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
./samples/SAFE/__tmp_5ed4cd86.c:148:9: error: expected declaration or statement at end of input
  148 |         if (strcmp(input, "ALL") == 0 || strcmp(input
      |         ^~
./samples/SAFE/__tmp_5ed4cd86.c:148:9: error: expected declaration or statement at end of input
